# mcp-anything

./: .gitignore  CLAUDE.md  CONTRACT.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml
examples/: README.md
examples/click-server/: AGENTS.md  README.md  pyproject.toml
examples/click-server/src/mcp_click/: __init__.py  backend.py  models.py  prompts.py  resources.py  server.py  state.py
examples/click-server/src/mcp_click/tools/: argument.py  bash_complete.py  bool_param_type.py  bytes_io_copy.py  choice.py  cli_runner.py  click_exception.py  command.py  command_collection.py  composite_param_type.py  console_stream.py  context.py  conversion.py  creation.py  date_time.py  echoing_stdin.py  editor.py  file.py  fish_complete.py  func_param_type.py  general.py  group.py  help_formatter.py  lazy_file.py  no_args_is_help_error.py  option.py  param_type.py  parameter.py  path.py  progress_bar.py  query.py  result.py  shell_complete.py
examples/click-server/tests/: conftest.py  test_tools.py
examples/ffmpeg-server/: AGENTS.md  README.md  mcp.json  pyproject.toml
examples/ffmpeg-server/src/ffmpeg/: backend.py  models.py  prompts.py  resources.py  server.py  state.py
examples/ffmpeg-server/src/ffmpeg/tools/: cli_options.py
examples/ffmpeg-server/src/mcp_ffmpeg/: __init__.py  backend.py  models.py  server.py
examples/ffmpeg-server/src/mcp_ffmpeg/tools/: cli_options.py  general.py
examples/ffmpeg-server/tests/: conftest.py  test_protocol.py  test_tools.py
examples/github-server-scoped/: AGENTS.md  README.md  mcp.json  pyproject.toml  scope.yaml
examples/github-server-scoped/src/mcp_github_scoped/: __init__.py  backend.py  models.py  prompts.py  resources.py  server.py  state.py
examples/github-server-scoped/src/mcp_github_scoped/tools/: api.py
examples/github-server-scoped/tests/: conftest.py  test_backend.py  test_protocol.py  test_runtime.py  test_tools.py
examples/httpstat-server/: pyproject.toml
examples/httpstat-server/src/mcp_httpstat/: __init__.py  backend.py  models.py  prompts.py  resources.py  server.py  state.py
examples/httpstat-server/src/mcp_httpstat/tools/: general.py
examples/httpstat-server/tests/: conftest.py
examples/imagemagick-server/: AGENTS.md  README.md  mcp.json  pyproject.toml
examples/imagemagick-server/src/imagemagick/: __init__.py  models.py  server.py  state.py
examples/imagemagick-server/src/imagemagick/tools/: base_image.py  general.py
examples/imagemagick-server/src/mcp_imagemagick/: backend.py  models.py  prompts.py  resources.py  server.py
examples/imagemagick-server/src/mcp_imagemagick/tools/: base_image.py  general.py
examples/imagemagick-server/tests/: conftest.py  test_protocol.py  test_tools.py
examples/yt-dlp-server/: AGENTS.md  README.md  mcp.json  pyproject.toml
examples/yt-dlp-server/src/yt_dlp/: __init__.py  backend.py  models.py  prompts.py  resources.py  server.py  state.py
examples/yt-dlp-server/src/yt_dlp/tools/: a_cast_channel_ie.py  alura_course_ie.py  andere_tijden_ie.py  aria2c_fd.py  arte_tv_category_ie.py  aws_idp.py  bandcamp_album_ie.py  bbcie.py  bbvtv_live_ie.py  bili_intl_base_ie.py  bilibili_base_ie.py  bilibili_collection_list_ie.py  block.py  breakline_status_printer.py  bunny_cdn_fd.py  cache.py  callin_ie.py  creation.py  general.py
examples/yt-dlp-server/tests/: conftest.py  test_protocol.py  test_tools.py
src/mcp_anything/: __init__.py  cli.py  config.py  serve.py  url_fetcher.py
src/mcp_anything/analysis/: ast_analyzer.py  django_analyzer.py  express_analyzer.py  flask_fastapi_analyzer.py  go_analyzer.py  graphql_analyzer.py  grpc_analyzer.py  help_parser.py  import_resolver.py  java_analyzer.py  java_ast.py  openapi_analyzer.py  rails_analyzer.py  route_utils.py  rust_web_analyzer.py  scanner.py  schema_extractor.py  websocket_analyzer.py  zustand_analyzer.py
src/mcp_anything/codegen/: emitter.py  renderer.py
src/mcp_anything/conformance/: __init__.py  brief_fixture.py  parity.py  reporter.py  runner.py
src/mcp_anything/emit/: __init__.py  base.py
src/mcp_anything/models/: analysis.py  design.py  domain.py  manifest.py  validation.py
tests/: conftest.py  test_auth.py  test_codegen.py  test_conformance_parity.py  test_contract_items.py  test_django.py  test_domain_modeling.py  test_e2e_http.py  test_e2e_mcp_session.py  test_e2e_realworld_session.py  test_emit_review_fixes.py  test_enterprise.py  test_express.py  test_flask_fastapi.py  test_functional.py  test_github_scope_comparison.py  test_go.py  test_graphql.py  test_grpc.py  test_implement.py  test_import_resolver.py  test_integration.py  test_java_ast_analyzer.py  test_openapi.py  test_rails.py  test_rust_web.py  test_schema_extractor.py  test_scope.py  test_skill_bundle.py  test_spring.py  test_spring_boot.py  test_tool_design.py  test_url_fetcher.py  test_websocket.py
(+80 files in other folders)
