[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-click-server"
version = "0.1.0"
description = "MCP server for click (CLI application, with 200 capabilities)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
mcp-click = "mcp_click.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_click"]

