[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ffmpeg-server"
version = "0.1.0"
description = "MCP server for ffmpeg (with 101 capabilities)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
mcp-ffmpeg = "mcp_ffmpeg.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ffmpeg"]

