[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-imagemagick-server"
version = "0.1.0"
description = "MCP server for imagemagick (with 200 capabilities)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
mcp-imagemagick = "mcp_imagemagick.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_imagemagick"]

