[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-yt-dlp-server"
version = "0.1.0"
description = "MCP server for yt-dlp (with 50 capabilities)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
mcp-yt-dlp = "yt_dlp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_dlp"]

